# catkin

./: .gitignore  .travis.yml  00.catkin.buildspace.sh.in  CHANGELOG.rst  CMakeLists.txt  README.rst  catkin-context.in  debian.rules  env.sh.in  manifest.xml  package.xml  ros-config-version.cmake.in  ros-config.buildspace.cmake.in  ros-config.cmake.in  setup.py  setup.sh.in  stack.xml  stack.yaml  toplevel.cmake
.ropeproject/: globalnames
cmake/: ROSConfig.cmake  __init__.py.in  all.cmake  assert.cmake  atomic_configure_file.cmake  catkin-config.cmake  catkin-config.cmake.in  catkin-context.in  catkinConfig.cmake.in  catkin_EXTRAS_DIR  catkin_add_env_hooks.cmake  catkin_destinations.cmake  catkin_download.cmake  catkin_export_python.cmake  catkin_generate_debian.py  catkin_generate_environment.cmake  catkin_generate_gbp.py  catkin_install_python.cmake  catkin_libraries.cmake  catkin_metapackage.cmake  catkin_package.cmake  catkin_package_export.cmake  catkin_package_xml.cmake  catkin_plugins.py  catkin_project.cmake  catkin_python_setup.cmake  catkin_stack.cmake  catkin_strip_root_path.cmake  catkin_symlink_install.cmake  catkin_workspace.cmake  check_test_ran.py  check_unused_arguments.cmake  create_plugin_xml.py  custom_install.cmake  debian-util.cmake  debug_message.cmake  dist.cmake  dummy_main.cpp  em_expand.cmake  empy.cmake  (+43 more)
cmake/Modules/: FindBZip2.cmake  FindEigen.cmake  FindTinyXML.cmake  eigen-config-version.cmake  eigen-config.cmake
cmake/cmake_tests/: cmake_tests.cmake  test_list_insert_in_workspace_order.cmake
cmake/em/: changelog.em  control.em  env_cached.em  generate_cached_env.py.em  manifest.xml.em  order_packages.cmake.em  order_projects.cmake.em  pkg-config.pc.em  pkg.pc.em  rules.cmake.em  rules.python_distutils.em  setup.bat.em  setup.sh.em  sort_stacks_topologically.cmake.em  topologically_traverse.cmake.em
cmake/env-hooks/: 05.catkin-test-results.bat.buildspace.em  05.catkin-test-results.bat.develspace.em  05.catkin-test-results.bat.in  05.catkin-test-results.sh.buildspace.em  05.catkin-test-results.sh.develspace.em  05.catkin-test-results.sh.develspace.in  05.catkin-test-results.sh.in  05.catkin_make.bash  05.catkin_make_isolated.bash  CMakeLists.txt
cmake/platform/: cross_platform_utilities.cmake  lsb.cmake  ubuntu.cmake  windows.cmake
cmake/sphinx/: README.EXTENSIONS_DONT_GO_HERE  conf.py
cmake/symlink_install/: catkin_install_logic.cmake  catkin_symlink_install.cmake.in  catkin_symlink_install_append_install_code.cmake  catkin_symlink_install_directory.cmake  catkin_symlink_install_files.cmake  catkin_symlink_install_programs.cmake  catkin_symlink_install_targets.cmake  install.cmake
cmake/templates/: Doxyfile.in  __init__.py.in  _setup_util.py  _setup_util.py.in  catkin-config.cmake.in  cfg-extras.context.py.in  env-hook.context.py.in  env.bat.buildspace.in  env.bat.in  env.bat.installable.in  env.sh.buildspace.in  env.sh.in  env.sh.installable.in  env_cached.context.py.in  generate_cached_env.context.py.in  generate_cached_setup.py.in  local_setup.bat.in  local_setup.fish.in  local_setup.sh.in  manifest.xml.in  metapackage.cmake.in  order_packages.context.py.in  order_projects.context.py.in  pkg-config-version.cmake.in  pkg-config.cmake.buildspace.in  pkg-config.cmake.in  pkg-config.cmake.installable.in  pkg-config.pc.context.in  pkg.context.pc.in  pkgConfig-version.cmake.in  pkgConfig.cmake.in  python_distutils_install.bat.in  python_distutils_install.sh.in  python_win32_wrapper.cpp  python_win32_wrapper.cpp.in  python_wrapper.bat.in  relay.py.in  relay_env.bat.in  relay_env.sh.in  relay_setup.bash.in  (+31 more)
cmake/test/: download_checkmd5.py  (+10 more)
debian/: README  changelog  changelog.em  control  control.em  rules
doc/: .gitignore  Makefile  aside.rst  builddocs.rst  catkin-release.rst  catkin_migration.rst  code_generation.rst  conf.py  current_goal.rst  detritus.rst.bak  environment.rst  find_package.rst  generate_cmake_rst.py  generate_macros_rst.py  glossary.rst  index.rst  layout.rst  macros.rst  release.rst  rosbuild_migration.rst  setup_dot_py.rst  stack_xml.rst  standards.rst  supposed.rst  thirdparty.rst  variables.rst  walkthrough.rst
env-hooks/: 00.catkin.buildspace.all.in  00.catkin.zsh.in  CMakeLists.txt
rosinstalls/: base.rosinstall  fuerte-devel.rosinstall
scripts/: changelog_increment.py  makepkgs.sh  runtests.py
test/: .gitignore  CMakeLists.txt  README.rst  full.rosinstall  import_a.py  import_b.py  incremental_by_stack_build.sh  make_enmasse_dscs.sh  make_packages.sh  make_quick.sh  release_repos.yaml  setup.cfg  test-nocatkin.rosinstall  test.rosinstall  test_basics.py  test_list_append_keys_from.cmake  test_list_insert_options.cmake  utils.py
test/mock_resources/src-fail/badly_specified_changelog/: CMakeLists.txt  package.xml  stack.xml
test/mock_resources/src/catkin_test/d/: CMakeLists.txt  lib.cpp  package.xml
test/mock_resources/src/catkin_test/d/include/d/: foo.hpp
test/mock_resources/src/catkin_test/d/msg/: DMsg.msg
test/mock_resources/src/catkin_test/d/src/d/: __init__.py
test/mock_resources/src/compile_options/set_compile_options/: CMakeLists.txt  package.xml
test/mock_resources/src/compile_options/set_compile_options/cmake/: set_compile_options-extra.cmake.in
test/mock_resources/src/compile_options/use_compile_options/: CMakeLists.txt  lib.cpp  package.xml
test/mock_resources/src/compile_options/use_transitive_compile_options/: CMakeLists.txt  package.xml
test/mock_resources/src/definitions/use_definitions/: CMakeLists.txt  package.xml
test/mock_resources/src/linker_options/src/leaf_pkg/: CMakeLists.txt  leaf.cpp  package.xml
test/mock_resources/src/linker_options/src/root_pkg/: CMakeLists.txt  package.xml  root.cpp
test/mock_resources/src/linker_options/src/root_pkg/include/root_pkg/: root.hpp
test/src/b/: CMakeLists.txt
test/src/catkin_test/a/: CMakeLists.txt
test/src/catkin_test/b/: CMakeLists.txt
test/src/catkin_test/c/: CMakeLists.txt
test/src/catkin_test/d/: CMakeLists.txt
test/src/catkin_test/nolangs/: CMakeLists.txt  stack.yaml
util/: setup_debug_py.sh
(+246 files in other folders)
