<package>
  <name>use_compile_options</name>
  <version>3.4.5</version>
  <description>foo</description>
  <author>Somebody</author>
  <maintainer email="Somebody@somewhere.org">Somebody</maintainer>
  <license>Unknown</license>
  <url/>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>set_compile_options</build_depend>
  <run_depend>set_compile_options</run_depend>
</package>
