<package>
  <name>use_definitions</name>
  <version>3.4.5</version>
  <description>foo</description>
  <author>Somebody</author>
  <maintainer email="Somebody@somewhere.org">Somebody</maintainer>
  <license>Unknown</license>
  <url/>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>set_definitions</build_depend>
  <run_depend>set_definitions</run_depend>
</package>
